[package]
edition = "2021"
name = "crab-jwt"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
jsonwebtoken = "9.1.0"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
